(chore): Moved the form error messages inline with input label

--- a/src/app/common/components/button/button.component.html
+++ b/src/app/common/components/button/button.component.html
@@ -17,7 +17,8 @@
     'm-button--overlay': overlay,
     'm-button--iconOnly': iconOnly,
     'm-button--dropdown': !!dropdown && showDropdownMenu,
-    'm-pulsating--small': pulsating
+    'm-pulsating--small': pulsating,
+    'm-button-solidColor': solid
   }"
 >
   <div *ngIf="!_saving" class="m-button__text--unsaved" #buttonTextContainer>
