--- a/src/app/modules/forms/login/login.ng.scss
+++ b/src/app/modules/forms/login/login.ng.scss
@@ -47,6 +47,36 @@
     font-weight: 400;
   }
 
+  .m-login__divider {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    padding: 10px 0;
+    box-sizing: border-box;
+
+    span:not(.m-login__divider__text) {
+      flex: 1;
+      margin: 0 -40px;
+      @include m-theme() {
+        border-bottom: 2px solid themed($m-borderColor--primary);
+      }
+    }
+    .m-login__divider__text {
+      padding: 0 20px;
+      font-size: 15px;
+      font-weight: 600;
+    }
+  }
+
+  .m-login__footer {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    padding: 28px 0;
+  }
+
   .m-login-2fa {
     padding: 0;
 
