Fix horizontal scrollbar in emoji picker on some platforms #5294

--- a/src/app/common/components/emoji-picker/emoji-picker.component.ng.scss
+++ b/src/app/common/components/emoji-picker/emoji-picker.component.ng.scss
@@ -111,5 +111,10 @@
       height: 400px;
       width: 338px;
     }
+
+    .emoji-mart-scroll {
+      overflow-x: hidden;
+      @include vertical-scroll;
+    }
   }
 }
