use a different way to detect experiment

--- a/src/app/modules/homepage/container.component.html
+++ b/src/app/modules/homepage/container.component.html
@@ -8,10 +8,6 @@
   ></m-discovery__trends>
 </m-discovery> -->
 <ng-template #notGuestMode>
-  <m-homepage__v2
-    *mExperiment="'homepage-v3'; variation: false"
-  ></m-homepage__v2>
-  <m-homepage__v3
-    *mExperiment="'homepage-v3'; variation: true"
-  ></m-homepage__v3>
+  <m-homepage__v3 *ngIf="isHomepageV3"></m-homepage__v3>
+  <m-homepage__v2 *ngIf="!isHomepageV3"></m-homepage__v2>
 </ng-template>
