channel recommendations in feed minds/minds#2925 and minds/minds#2926
Merge branch 'feat/channel-recommendations' into 'master'

channel recommendations in feed minds/minds#2925 and minds/minds#2926

See merge request minds/front!1783

Squashed commit of the following:

commit 621f03f9d4ef4bd1390f2e43ebaf5ad6fe4266b3
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Fri Feb 25 18:02:40 2022 +0300

    fix channel rec showing logic and pos

commit 84433c8309c02d28777ba4db1a969ec9f63858d9
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 13:13:45 2022 +0300

    fix discovery rec channels inject problem

commit c3d4b361b6312cfcf5eef567f9b86ac1861e6410
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 11:42:44 2022 +0300

    fix tests

commit 998de067a6cdff4053007e953e5e4e20e177848f
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 11:30:06 2022 +0300

    fix lint again wen husky linter?

commit f0acfd2670d5d2e586499b4370cb3f39b23ded1c
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 11:17:14 2022 +0300

    fix lint and test

commit defa5b4c5e0b084e38998ceb7a97ecc17296252a
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 05:59:18 2022 +0300

    add extra encapsulation to classnames

commit 13eddf610cabe460e37423682cfcfca012dd73bb
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 05:55:13 2022 +0300

    add experiments to sidebar suggested channels

commit 841df1d5653c49e688fb3f2852e1fe54bfad4d82
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 05:54:24 2022 +0300

    move recs to suggestions module

commit 8e17c04a6eacb8e83957fcd01f05aa7c7f5df7fa
Merge: 260978b6b bef028122
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Wed Feb 23 05:28:00 2022 +0300

    Merge branch 'master' into feat/channel-recommendations

commit 260978b6bb0aa1ecf3c432c40e5d6741447e3982
Author: Mani Shooshtari <mani@shooshtari.com>
Date:   Fri Feb 18 16:29:56 2022 +0300

    

--- a/src/app/modules/default-feed/container.component.html
+++ b/src/app/modules/default-feed/container.component.html
@@ -16,6 +16,7 @@
         <m-suggestions__sidebar
           type="user"
           customTitle="popular_channels"
+          *mExperiment="'channel-recommendations'; variation: false"
         ></m-suggestions__sidebar>
       </div>
     </div>
