--- a/src/app/modules/newsfeed/newsfeed.component.html
+++ b/src/app/modules/newsfeed/newsfeed.component.html
@@ -19,7 +19,10 @@
 
         <m-chat__sidebarPrompt></m-chat__sidebarPrompt>
         <m-language__sidebarPrompt></m-language__sidebarPrompt>
-        <m-suggestions__sidebar type="user"></m-suggestions__sidebar>
+        <m-suggestions__sidebar
+          type="user"
+          *mExperiment="'channel-recommendations'; variation: false"
+        ></m-suggestions__sidebar>
 
         <m-liquiditySpot> </m-liquiditySpot>
         <div class="m-spacer"></div>
