--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -2,14 +2,15 @@
 
 <section>
   <img
-    src="/assets/homepage/neural.png"
+    [src]="cdnAssetsUrl + '/assets/homepage/neural.png'"
     class="m-homepage__v3__neuralBg"
     [m-blurhash]="blurhash"
+    [m-blurhashFullscreen]="true"
   />
 
   <div class="m-homepage__v3__firstSection__container">
     <div
-      style="display: flex; flex: 1; flex-direction: column; max-width: 1180px; padding: 0 32px"
+      style="display: flex; flex: 1; flex-direction: column; max-width: 1180px; padding: 0 32px; overflow: hidden"
     >
       <div class="m-homepage__v3__firstSection__actions">
         <h2 class="m-homepage__v3__title" ngPreserveWhitespaces>
@@ -45,7 +46,7 @@
         </a>
       </div>
 
-      <section class="m-homepage__metrics">
+      <section class="m-homepage__metrics m-grid__hide--mobile">
         <div class="m-homepage__metric">
           <span class="m-homepage__metric__title">6M+</span>
           <span class="m-homepage__metric__subtitle">Members</span>
@@ -63,11 +64,22 @@
           <span class="m-homepage__metric__subtitle">Boosted Views</span>
         </div>
       </section>
+
+      <section class="m-homepage__metrics m-grid__only--mobile">
+        <div class="m-homepage__metric">
+          <span class="m-homepage__metric__title">7M+</span>
+          <span class="m-homepage__metric__subtitle">Members</span>
+        </div>
+        <div class="m-homepage__metric">
+          <span class="m-homepage__metric__title">120M+</span>
+          <span class="m-homepage__metric__subtitle">Conversations</span>
+        </div>
+      </section>
     </div>
   </div>
 
   <section class="m-homepage__asFeaturedIn">
-    <m-marketing__asFeaturedIn></m-marketing__asFeaturedIn>
+    <m-marketing__asFeaturedInV2></m-marketing__asFeaturedInV2>
   </section>
 </section>
 
@@ -142,12 +154,12 @@
       </div>
       <div
         class="
-            m-grid__column-5 m-grid__column-6--tablet m-grid__column-12--mobile
+            m-grid__column-5 m-grid__column-6--tablet m-grid__hide--mobile
             m-marketing__image
           "
       >
         <span>
-          <img [src]="'/assets/homepage/bridge-the-divide.png'" />
+          <img [src]="cdnAssetsUrl + 'assets/homepage/bridge-the-divide.png'" />
         </span>
       </div>
     </div>
@@ -208,7 +220,7 @@
           "
       >
         <span>
-          <img [src]="'/assets/homepage/make-sense-of-your-world.png'" />
+          <img [src]="cdnAssetsUrl + '/assets/homepage/make-sense-of-your-world.png'" />
         </span>
       </div>
     </div>
@@ -223,7 +235,7 @@
       <div
         class="m-grid__column-4 m-grid__column-12--mobile m-marketing__image"
       >
-        <img [src]="'/assets/homepage/earn-crypto.png'" />
+        <img [src]="cdnAssetsUrl + '/assets/homepage/earn-crypto.png'" />
       </div>
       <div class="m-grid__column-8 m-grid__column-12--mobile m-marketing__body">
         <h3 i18n="@@HOMEPAGE_V3__EARN_CRYPTO__TITLE">
