--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -220,7 +220,11 @@
           "
       >
         <span>
-          <img [src]="cdnAssetsUrl + '/assets/homepage/make-sense-of-your-world.png'" />
+          <img
+            [src]="
+              cdnAssetsUrl + '/assets/homepage/make-sense-of-your-world.png'
+            "
+          />
         </span>
       </div>
     </div>
