--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -17,8 +17,8 @@
     <div class="m-marketingFooter__mainSubsection--brand">
       <div>
         <div class="m-marketingFooter__logo"></div>
-        <h4 class="m-marketingFooter__slogan" i18n="@@TAKE_BACK_CONTROL">
-          Take back control of your social media
+        <h4 class="m-marketingFooter__slogan">
+          {{ slogan }}
         </h4>
         <div class="m-marketingFooter__text">&copy; {{ year }} Minds, Inc.</div>
       </div>
