update links and other fixes

--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -8,6 +8,7 @@
     align-items: flex-start;
     flex-direction: column;
     justify-content: center;
+    border-right: none !important;
   }
 
   .m-v3TopbarLoginWrapper__joinMindsNow {
