--- a/src/app/modules/marketing/v2/as-featured-in.component.html
+++ b/src/app/modules/marketing/v2/as-featured-in.component.html
@@ -11,7 +11,7 @@
   <ul class="m-grid__column-10">
     <li>
       <a
-        href="http://podcasts.joerogan.net/podcasts/bill-ottman"
+        href="https://open.spotify.com/episode/06T2h6DzvdEKPubSvlDvaB"
         target="_blank"
       >
         <img
@@ -25,7 +25,7 @@
 
     <li>
       <a
-        href="https://www.wsj.com/articles/facebook-on-notice-as-vietnam-tightens-grip-on-social-media-11547036594"
+        href="https://fortune.com/2021/09/16/minds-social-network-crypto-balance-sheet-ethereum-bitcoin-usd-coin/"
         target="_blank"
       >
         <img
@@ -39,7 +39,7 @@
 
     <li>
       <a
-        href="https://www.wired.com/story/minds-anti-facebook/"
+        href="https://venturebeat.com/2021/06/17/minds-raises-10m-for-decentralized-and-encrypted-social-network-and-messaging-app/"
         target="_blank"
       >
         <img
@@ -55,7 +55,7 @@
 
     <li>
       <a
-        href="https://www.reuters.com/article/us-vietnam-cyber-usa/u-s-lawmakers-urge-google-facebook-to-resist-vietnam-cybersecurity-law-idUSKBN1K7147"
+        href="https://www.wired.com/story/minds-anti-facebook/"
         target="_blank"
       >
         <img
@@ -111,7 +111,7 @@
 
     <li>
       <a
-        href="https://www.independent.co.uk/news/business/indyventure/minds-facebook-alternative-deletefacebook-social-network-data-a8475841.html"
+        href="https://www.forbes.com/sites/janicegassam/2020/02/29/how-daryl-davis-inspired-more-than-200-white-supremacists-to-change-and-how-his-new-platform-will-help-spark-meaningful-dialogue/"
         target="_blank"
       >
         <img
