add more locales and bg color

--- a/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
+++ b/src/app/modules/homepage-v3/homepage-v3.component.ng.scss
@@ -12,6 +12,9 @@
       height: 100vh;
       object-fit: cover;
       min-height: 675px;
+      @include m-theme() {
+        background-color: themed($m-bgColor--primaryDarkAlways);
+      }
     }
 
     margin: -75px 0 0;
