--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -49,30 +49,54 @@
       <section class="m-homepage__metrics m-grid__hide--mobile">
         <div class="m-homepage__metric">
           <span class="m-homepage__metric__title">6M+</span>
-          <span class="m-homepage__metric__subtitle">Members</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__MEMBERS"
+            >Members</span
+          >
         </div>
         <div class="m-homepage__metric">
           <span class="m-homepage__metric__title">100M+</span>
-          <span class="m-homepage__metric__subtitle">Conversations</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__CONVERSATIONS"
+            >Conversations</span
+          >
         </div>
         <div class="m-homepage__metric">
           <span class="m-homepage__metric__title">5M+</span>
-          <span class="m-homepage__metric__subtitle">Tokens Rewarded</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__TOKENS_REWARDED"
+            >Tokens Rewarded</span
+          >
         </div>
         <div class="m-homepage__metric">
           <span class="m-homepage__metric__title">2B+</span>
-          <span class="m-homepage__metric__subtitle">Boosted Views</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__BOOSTED_VIEWS"
+            >Boosted Views</span
+          >
         </div>
       </section>
 
       <section class="m-homepage__metrics m-grid__only--mobile">
         <div class="m-homepage__metric">
-          <span class="m-homepage__metric__title">7M+</span>
-          <span class="m-homepage__metric__subtitle">Members</span>
+          <span class="m-homepage__metric__title">6M+</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__TOKENS_REWARDED"
+            >Tokens Rewarded</span
+          >
         </div>
         <div class="m-homepage__metric">
-          <span class="m-homepage__metric__title">120M+</span>
-          <span class="m-homepage__metric__subtitle">Conversations</span>
+          <span class="m-homepage__metric__title">790K+</span>
+          <span
+            class="m-homepage__metric__subtitle"
+            i18n="@@HOMEPAGE_V3__HOLDERS"
+            >Holders</span
+          >
         </div>
       </section>
     </div>
