(chore): 98% completion reached. Waiting for review with Michael, tomorrow.

--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -96,9 +96,13 @@
           color: themed($m-textColor--primaryInverted);
         }
 
-        &:hover {
-          @include m-theme() {
-            background-color: rgba(themed($m-link), 0.4);
+        &:not(:disabled) {
+          &:not(.m-button--overlay) {
+            &:hover {
+              @include m-theme() {
+                background-color: rgba(themed($m-link), 0.6);
+              }
+            }
           }
         }
       }
