--- a/src/app/modules/app-prompt/app-prompt.component.ng.scss
+++ b/src/app/modules/app-prompt/app-prompt.component.ng.scss
@@ -5,7 +5,7 @@
   position: fixed;
   bottom: 0;
 
-  @include z-index(popover--modal);
+  @include z-index(footer--banner);
 
   .m-appPrompt__container {
     position: absolute;
