--- a/src/app/modules/homepage-v3/homepage-v3.component.html
+++ b/src/app/modules/homepage-v3/homepage-v3.component.html
@@ -6,6 +6,7 @@
     class="m-homepage__v3__neuralBg"
     [m-blurhash]="blurhash"
     [m-blurhashFullscreen]="true"
+    *ngIf="showBg"
   />
 
   <div class="m-homepage__v3__firstSection__container">
